--- a/A.html
+++ b/A.html
@@ -12,7 +12,7 @@
       <!-- Image à gauche cliquable -->
       <td style="text-align: left;">
         <a href="https://eneam.uac.bj">
-          <img src="images/logo-eneam.png" alt="ENEAM" style="height: 100px;">
+          <img src="logo-eneam.png" alt="ENEAM" style="height: 100px;">
         </a>
       </td>
 
@@ -25,7 +25,7 @@
       <!-- Image à droite cliquable -->
       <td style="text-align: right;">
         <a href="https://www.etudiant.uac.bj">
-          <img src="images/logo-uac.jpg" alt="UAC" style="height: 100px;">
+          <img src="logo-uac.jpg" alt="UAC" style="height: 100px;">
         </a>
       </td>
     </tr>
