--- a/Page2.html
+++ b/Page2.html
@@ -13,7 +13,7 @@
       <!-- Image à gauche cliquable -->
       <td style="text-align: left;">
         <a href="https://eneam.uac.bj">
-          <img src="images/logo-eneam.png" alt="ENEAM" style="height: 100px;">
+          <img src="logo-eneam.png" alt="ENEAM" style="height: 100px;">
         </a>
       </td>
 
@@ -26,7 +26,7 @@
       <!-- Image à droite cliquable -->
       <td style="text-align: right;">
         <a href="https://www.etudiant.uac.bj">
-          <img src="images/logo-uac.jpg" alt="UAC" style="height: 100px;">
+          <img src="logo-uac.jpg" alt="UAC" style="height: 100px;">
         </a>
       </td>
     </tr>
@@ -56,7 +56,7 @@
 <!-- Partie centrale -->
 <div style="text-align: center;">
   <a href="page1.html#fable">
-  <img src="images/Philippe.jpg" alt="Ma photo" style="height: 100px;">
+  <img src="Philippe.jpg" alt="Ma photo" style="height: 100px;">
 </a> <br/>
 
   <p><strong>  III - Mes Diplômes</strong></p>     
