--- a/cv.html
+++ b/cv.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="cv.css">
   </head>
     <div class="header-content">
-        <img style="text-align: left;" src="images/Philippe.jpg" alt="Photo de Philippe" class="profile-photo" style="height: 100px;">
+        <img style="text-align: left;" src="Philippe.jpg" alt="Photo de Philippe" class="profile-photo" style="height: 100px;">
         <h1>HOUNTONDJI PHILIPPE JÉSUSSÉDÈ</h1>
     </div>
 
