--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
  
 
-    <frameset style="background-image: url(images/plan.jpg);" rows="30%,70%">
+    <frameset style="background-image: url(plan.jpg);" rows="10%,90%">
         <frame src="A.html" scrolling="no">
        <frameset cols="10%,90%">
              <frame src="B.html">
