--- a/A.html
+++ b/A.html
@@ -11,7 +11,7 @@
     <tr>
       <!-- Image à gauche cliquable -->
       <td style="text-align: left;">
-        <a href="https://eneam.uac.bj">
+        <a href="https://eneam.uac.bj" target="_blank">
           <img src="logo-eneam.png" alt="ENEAM" style="height: 100px;">
         </a>
       </td>
@@ -23,7 +23,7 @@
       </td>
 
       <!-- Image à droite cliquable -->
-      <td style="text-align: right;">
+      <td style="text-align: right;" target="_blank">
         <a href="https://www.etudiant.uac.bj">
           <img src="logo-uac.jpg" alt="UAC" style="height: 100px;">
         </a>
