--- a/Page2.html
+++ b/Page2.html
@@ -12,7 +12,7 @@
     <tr>
       <!-- Image à gauche cliquable -->
       <td style="text-align: left;">
-        <a href="https://eneam.uac.bj">
+        <a href="https://eneam.uac.bj" target="_blank">
           <img src="logo-eneam.png" alt="ENEAM" style="height: 100px;">
         </a>
       </td>
@@ -25,7 +25,7 @@
 
       <!-- Image à droite cliquable -->
       <td style="text-align: right;">
-        <a href="https://www.etudiant.uac.bj">
+        <a href="https://www.etudiant.uac.bj" target="_blank">
           <img src="logo-uac.jpg" alt="UAC" style="height: 100px;">
         </a>
       </td>
@@ -54,7 +54,7 @@
 </p>
 
 <!-- Partie centrale -->
-<div style="text-align: center;">
+<div style="text-align: center;" target="_blank">
   <a href="page1.html#fable">
   <img src="Philippe.jpg" alt="Ma photo" style="height: 100px;">
 </a> <br/>
