--- a/A.html
+++ b/A.html
@@ -11,7 +11,7 @@
     <tr>
       <!-- Image à gauche cliquable -->
       <td style="text-align: left;">
-        <a href="https://eneam.uac.bj" target="_blank">
+        <a href="https://www.eneam.uac.bj" target="_blank">
           <img src="logo-eneam.png" alt="ENEAM" style="height: 100px;">
         </a>
       </td>
