--- a/Page2.html
+++ b/Page2.html
@@ -11,8 +11,8 @@
   <table style="width: 100%;">
     <tr>
       <!-- Image à gauche cliquable -->
-      <td style="text-align: left;">
-        <a href="https://eneam.uac.bj" target="_blank">
+      <td style="text-align: left;" target="_blank">
+        <a href="https://www.eneam.uac.bj" >
           <img src="logo-eneam.png" alt="ENEAM" style="height: 100px;">
         </a>
       </td>
@@ -24,7 +24,7 @@
       </td>
 
       <!-- Image à droite cliquable -->
-      <td style="text-align: right;">
+      <td style="text-align: right;" target="_blank">
         <a href="https://www.etudiant.uac.bj" target="_blank">
           <img src="logo-uac.jpg" alt="UAC" style="height: 100px;">
         </a>
@@ -55,7 +55,7 @@
 
 <!-- Partie centrale -->
 <div style="text-align: center;" target="_blank">
-  <a href="page1.html#fable">
+  <a href="page1.html#fable" target="_blank">
   <img src="Philippe.jpg" alt="Ma photo" style="height: 100px;">
 </a> <br/>
 
