--- a/A.html
+++ b/A.html
@@ -10,8 +10,8 @@
   <table  style="width: 100%;">
     <tr>
       <!-- Image à gauche cliquable -->
-      <td style="text-align: left;" target="_blank">
-        <a href="https://www.eneam.uac.bj">
+      <td style="text-align: left;">
+        <a href="https://www.eneam.uac.bj" target="_blank">>
           <img src="logo-eneam.png" alt="ENEAM" style="height: 100px;">
         </a>
       </td>
@@ -23,8 +23,8 @@
       </td>
 
       <!-- Image à droite cliquable -->
-      <td style="text-align: right;" target="_blank">
-        <a href="https://www.etudiant.uac.bj">
+      <td style="text-align: right;">
+        <a href="https://www.etudiant.uac.bj" target="_blank">>
           <img src="logo-uac.jpg" alt="UAC" style="height: 100px;">
         </a>
       </td>
