--- a/B.html
+++ b/B.html
@@ -12,7 +12,7 @@
     <p><a href="Tableau.html" target="fenetreC">Tableau </a></p>
     <p><a href="formulaire1.html" target="fenetreC">Formulaire 1</a></p>
     <p><a href="formulaire2.html" target="fenetreC">Formulaire 2</a></p>
-    <p><a href="cv.html" target="fenetreC">CV</a></p>
+    <p><a href="CV.html" target="fenetreC">CV</a></p>
     <style type="text/css"> 
       @import url(B.css); 
       </style> 
