--- a/Page2.html
+++ b/Page2.html
@@ -55,7 +55,7 @@
 
 <!-- Partie centrale -->
 <div style="text-align: center;" target="_blank">
-  <a href="page1.html#fable" target="_blank">
+  <a href="Page1.html#fable" target="_blank">
   <img src="Philippe.jpg" alt="Ma photo" style="height: 100px;">
 </a> <br/>
 
