--- a/Page2.html
+++ b/Page2.html
@@ -11,7 +11,7 @@
   <table style="width: 100%;">
     <tr>
       <!-- Image à gauche cliquable -->
-      <td style="text-align: left;">
+      <td style="text-align: left;" target="_blank">
         <a href="https://www.eneam.uac.bj" target="_blank">
           <img src="logo-eneam.png" alt="ENEAM" style="height: 100px;">
         </a>
