--- a/A.html
+++ b/A.html
@@ -10,7 +10,7 @@
   <table  style="width: 100%;">
     <tr>
       <!-- Image à gauche cliquable -->
-      <td style="text-align: left;">
+      <td style="text-align: left;" target="_blank">
         <a href="https://www.eneam.uac.bj" target="_blank">>
           <img src="logo-eneam.png" alt="ENEAM" style="height: 100px;">
         </a>
@@ -23,7 +23,7 @@
       </td>
 
       <!-- Image à droite cliquable -->
-      <td style="text-align: right;">
+      <td style="text-align: right;" target="_blank">
         <a href="https://www.etudiant.uac.bj" target="_blank">>
           <img src="logo-uac.jpg" alt="UAC" style="height: 100px;">
         </a>
