--- a/A.html
+++ b/A.html
@@ -11,7 +11,7 @@
     <tr>
       <!-- Image à gauche cliquable -->
       <td style="text-align: left;" target="_blank">
-        <a href="https://www.eneam.uac.bj" target="_blank">>
+        <a href="https://www.eneam.uac.bj" target="_blank">
           <img src="logo-eneam.png" alt="ENEAM" style="height: 100px;">
         </a>
       </td>
@@ -24,7 +24,7 @@
 
       <!-- Image à droite cliquable -->
       <td style="text-align: right;" target="_blank">
-        <a href="https://www.etudiant.uac.bj" target="_blank">>
+        <a href="https://www.etudiant.uac.bj" target="_blank">
           <img src="logo-uac.jpg" alt="UAC" style="height: 100px;">
         </a>
       </td>
