--- a/Page1.html
+++ b/Page1.html
@@ -54,3 +54,6 @@ sur la Lune ? <q>C'est un petit pas pour l'Homme, un grand pas pour l'Humanité<
       Jura, mais un peu tard, qu'on ne l'y prendrait plus. 
    </p>
    </blockquote> 
+    <style type="text/css">
+        @import url(page1.css)
+    </style>
