--- a/B.html
+++ b/B.html
@@ -5,14 +5,14 @@
 </head>
 <body>
     <h2><u>Menu</u></h2>
-    <p><a href="Page1.html" target="fenetreC">Page 1</a></p>
-    <p><a href="Page2.html" target="fenetreC">Page 2</a></p>
-    <p><a href="Page3.html" target="fenetreC">Page 3</a></p>
-    <p><a href="Page4.html" target="fenetreC">Page 4</a></p>
-    <p><a href="Tableau.html" target="fenetreC">Tableau </a></p>
-    <p><a href="formulaire1.html" target="fenetreC">Formulaire 1</a></p>
-    <p><a href="formulaire2.html" target="fenetreC">Formulaire 2</a></p>
-    <p><a href="CV.html" target="fenetreC">CV</a></p>
+    <p><a Frame 12% href="Page1.html" target="fenetreC">Page 1</a></p>
+    <p><a  Frame 12% href="Page2.html" target="fenetreC">Page 2</a></p>
+    <p><a  Frame 12% href="Page3.html" target="fenetreC">Page 3</a></p>
+    <p><a  Frame 12% href="Page4.html" target="fenetreC">Page 4</a></p>
+    <p><a  Frame 12% href="Tableau.html" target="fenetreC">Tableau </a></p>
+    <p><a  Frame 12% href="formulaire1.html" target="fenetreC">Formulaire 1</a></p>
+    <p><a  Frame 12% href="formulaire2.html" target="fenetreC">Formulaire 2</a></p>
+    <p><a  Frame 12% href="CV.html" target="fenetreC">CV</a></p>
     <style type="text/css"> 
       @import url(B.css); 
       </style> 
