--- a/Page1.html
+++ b/Page1.html
@@ -55,5 +55,5 @@ sur la Lune ? <q>C'est un petit pas pour l'Homme, un grand pas pour l'Humanité<
    </p>
    </blockquote> 
     <style type="text/css">
-        @import url(page1.css)
+        @import url(Page1.css)
     </style>
