--- a/C.html
+++ b/C.html
@@ -1,3 +1,77 @@
-<style type="text/css"> 
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Espace numérique - Étudiant Informatique</title>
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+            margin: 0;
+            padding: 0;
+            background: #f5f7fa;
+            color: #333;
+        }
+        .container {
+            max-width: 900px;
+            margin: 60px auto;
+            background: white;
+            padding: 50px;
+            border-radius: 12px;
+            box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+        }
+        h1 {
+            font-size: 2.5rem;
+            color: #1a202c;
+            margin-bottom: 20px;
+        }
+        h2 {
+            font-size: 2rem;
+            color: #2b6cb0;
+            margin-top: 40px;
+            margin-bottom: 15px;
+        }
+        h3 {
+            font-size: 1.5rem;
+            color: #2f855a;
+            margin-top: 40px;
+            margin-bottom: 15px;
+        }
+        p {
+            font-size: 1.1rem;
+            line-height: 1.7;
+            margin-bottom: 20px;
+        }
+        .button {
+            display: inline-block;
+            margin-top: 30px;
+            padding: 12px 30px;
+            background-color: #2b6cb0;
+            color: white;
+            text-decoration: none;
+            border-radius: 8px;
+            transition: background 0.3s ease;
+        }
+        .button:hover {
+            background-color: #2c5282;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Bienvenue sur mon espace numérique</h1>
+        <p>Ce site reflète mes premiers pas dans le développement web, réalisés dans le cadre de ma formation en informatique de gestion. C’est un projet d’apprentissage mais aussi une vitrine de mon savoir-faire.</p>
+
+        <h2>L'informatique : un monde d’opportunités</h2>
+        <p>À travers mes travaux, vous découvrirez comment la technologie ouvre la voie à l’innovation et à la création de solutions adaptées aux besoins actuels. L’ENEAM, école de référence, m’a permis de bâtir ces compétences solides.</p>
+
+        <h3>Découvrez, apprenez, partagez !</h3>
+        <p>Je vous invite à explorer ce site et à vous laisser inspirer. Pourquoi ne pas envisager de rejoindre à votre tour cette belle aventure ?</p>
+
+        <a href="#explorer" class="button">Explorer le site</a>
+    </div>
+    <style type="text/css"> 
     @import url(C.css); 
     </style>
+</body>
+</html>
