--- a/C.html
+++ b/C.html
@@ -68,7 +68,7 @@
         <h3>Découvrez, apprenez, partagez !</h3>
         <p>Je vous invite à explorer ce site et à vous laisser inspirer. Pourquoi ne pas envisager de rejoindre à votre tour cette belle aventure ?</p>
 
-        <a href="page1.html" class="button">Explorer le site</a>
+        <a href="Page1.html" class="button">Explorer le site</a>
     </div>
     <style type="text/css"> 
     @import url(C.css); 
