--- a/Page1.html
+++ b/Page1.html
@@ -4,7 +4,7 @@
     <title>Mon site mobile</title>
 </head>
 <body>
-    <h1>BIENVENU SUR MON  SITE !</h1> 
+    <h1 style="text-align: center;" style="color: blue">BIENVENU SUR MON  SITE !</h1> 
 <h2>Je me présente</h2> 
 <p> 
 Bonjour et bienvenue sur mon site !<br /> Je me nomme <strong> HOUNTONDJI Philippe jésussédè.</strong> 
