--- a/Page2.html
+++ b/Page2.html
@@ -80,6 +80,6 @@ Passionné par le développement personnel, j'aime m'investir dans des activité
 <style type="text/css">
   @import url(page2.css);
 </style>
-
+<a href="Page3.html"><button>Suivant</button></a>
 </body>
 </html>
