--- a/Page3.html
+++ b/Page3.html
@@ -19,3 +19,4 @@ J'ai failli m'évanøuir
 <style type="text/css"> 
 @import url(page3.css); 
 </style> 
+   <a href="Page4.html"><button>Suivant</button></a>
