--- a/Page4.html
+++ b/Page4.html
@@ -101,4 +101,4 @@
 <style type="text/css"> 
 @import url(page4.css); 
 </style> 
-  <a href="tableau.html"><button>Suivant</button></a>
+  <a href="Tableau.html"><button>Suivant</button></a>
