--- a/Tableau.html
+++ b/Tableau.html
@@ -184,6 +184,6 @@
     <style type="text/css"> 
         @import url(tableau.css); 
     </style> 
-    
+  <a href="formulaire1.html"><button>Suivant</button></a>  
 </body>
 </html>
