--- a/formulaire2.html
+++ b/formulaire2.html
@@ -56,7 +56,8 @@
             </form> 
             <style type="text/css"> 
                 @import url(formulaire.css); 
-            </style>      
+            </style>  
+                <a href="CV.html"><button>Suivant</button></a>
     </body>
 </html>
             
