--- a/Page3.html
+++ b/Page3.html
@@ -8,14 +8,19 @@
     </style>
     </head>
  <body>
- <p  style="text-align: center;" class="text"><strong><u>HISTOIRE TRÈS DRÔLE</u></strong></p>
+ <p  style="text-align: center;" class="text"><h1><u>L’histoire du vieux pot fissuré</u></h1></p>
 
-<p>J’ai été invité à une cérémonie et je suis arrivé en retard, donc je me suis retrouvé complètement derrière. Au cours du partage de la nourriture , j'étais à ma place et une dame est passée pour partager les assiettes et cuillères. Quelques minutes plus tard une autre dame est venu avec un plateau de riz .</p>
-<p> Elle donna à tout le monde mais arrivée à mon niveau c'est fini. Je n'ai rien dit. La deuxième nourriture est passée, Arrivée à mon niveau, c’est encore fini Troisième nourriture, pareil. En ce moment, le taux de ma colère est monté au niveau maximal. J'étais tranquil dans mon coin. Les yeux rouges, le visage bien serré, la mine renforcée. Quelques minutes plus tard une dame est venu vers moi et demande : << tonton tenez des piques dents>>
-J'ai failli la giflé quand le monsieur qui était devant moi a dit : ce tonton n'a rien mangé.</p>
+<p>
 
-<p><em>Mais comment? s'exclama la dame. Désolé tonton ! Suivez moi ! J'étais tellement content que je me suis levé pour aller prendre la nourriture. A mon retour, tellement j'étais pressé aller m'asseoir que j'ai heurté une câble du DJ avec mon pied.  Du coup j'étais déséquilibré et puis la nourriture s'est renversé en même temps .Pire encore la musique s'est arrêté. C'est là j'entends une voix qui sort de la foule :<< Lui il est comme ça, quand il voit la nourriture, il ne reste plus tranquille>></em></p>
-J'ai failli m'évanøuir 
+Un vieux porteur d’eau en Inde transportait chaque jour deux grands pots accrochés aux extrémités d’une perche, qu’il portait sur ses épaules. L’un des pots était en parfait état, tandis que l’autre avait une fissure. À la fin du long trajet, le pot fissuré arrivait toujours à moitié vide.<br/>
+
+Pendant deux ans, cela se répéta. Le pot intact était fier de son travail, mais le pot fissuré, lui, était honteux de son imperfection et triste de ne pas pouvoir accomplir sa tâche complètement.<nr />
+
+Un jour, il dit au porteur d’eau :
+« J’ai honte de moi. Cette fissure fait que je perds de l’eau tout le long du chemin. »
+
+Le porteur d’eau lui répondit avec douceur :<br/>
+« As-tu remarqué qu’il y a des fleurs seulement de ton côté du chemin, et pas de l’autre ? C’est parce que j’ai toujours su pour ta fissure, alors j’ai semé des graines de fleurs de ton côté, et chaque jour, tu les arroses sans le savoir. Grâce à toi, j’ai pu cueillir ces fleurs pour décorer la maison de mon maître. Sans toi, il n’y aurait pas eu cette beauté. »
 <style type="text/css"> 
 @import url(page3.css); 
 </style> 
