--- a/Page3.html
+++ b/Page3.html
@@ -8,7 +8,7 @@
     </style>
     </head>
  <body>
- <p  style="text-align: center;" class="text"><h1><u>L’histoire du vieux pot fissuré</u></h1></p>
+ <style="text-align: center;"><h1><u>L’histoire du vieux pot fissuré</u></h1>
 
 <p>
 
@@ -22,6 +22,6 @@ Un jour, il dit au porteur d’eau :
 Le porteur d’eau lui répondit avec douceur :<br/>
 « As-tu remarqué qu’il y a des fleurs seulement de ton côté du chemin, et pas de l’autre ? C’est parce que j’ai toujours su pour ta fissure, alors j’ai semé des graines de fleurs de ton côté, et chaque jour, tu les arroses sans le savoir. Grâce à toi, j’ai pu cueillir ces fleurs pour décorer la maison de mon maître. Sans toi, il n’y aurait pas eu cette beauté. »
 <style type="text/css"> 
-@import url(page3.css); 
+@import url(Page3.css); 
 </style> 
    <a href="Page4.html"><button>Suivant</button></a>
