--- a/Page3.html
+++ b/Page3.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-<htm
+<html>
 <head>
    <title>mon site personel</title>
-    <style>
-        .text{
-            color: red;  }
-    </style>
+
     </head>
  <body>
- <style="text-align: center;"><h1><u>L’histoire du vieux pot fissuré</u></h1>
+ <h1 style="text-align: center;"><u>L’histoire du vieux pot fissuré</u></h1>
 
 <p>
 
@@ -25,3 +22,7 @@ Le porteur d’eau lui répondit avec douceur :<br/>
 @import url(Page3.css); 
 </style> 
    <a href="Page4.html"><button>Suivant</button></a>
+</nr>
+</p>
+ </body>
+</html>
