--- a/Page3.html
+++ b/Page3.html
@@ -21,7 +21,7 @@ Le porteur d’eau lui répondit avec douceur :<br/>
 <style type="text/css"> 
 @import url(Page3.css); 
 </style> 
-   <a href="Page4.html"><button>Suivant</button></a>
+  <p></p> <a href="Page4.html"><button class="suivant">Suivant</button></a></p>
 </nr>
 </p>
  </body>
