--- a/Page1.html
+++ b/Page1.html
@@ -57,4 +57,4 @@ sur la Lune ? <q>C'est un petit pas pour l'Homme, un grand pas pour l'Humanité<
     <style type="text/css">
         @import url(Page1.css)
     </style>
-        <a href="Page2.html"><button>Suivant</button></a>
+        <a href="Page2.html"><button class="suivant">Suivant</button></a>
