--- a/formulaire1.html
+++ b/formulaire1.html
@@ -105,7 +105,7 @@
                             <style type="text/css"> 
                                 @import url(formulaire.css); 
                             </style> 
-<a href="formulaire2.html"><button>Suivant</button></a>
+<a href="formulaire2.html"><button class="suivant">Suivant</button></a>
 
     </body>
 </html>
