--- a/formulaire2.html
+++ b/formulaire2.html
@@ -57,7 +57,7 @@
             <style type="text/css"> 
                 @import url(formulaire.css); 
             </style>  
-                <a href="CV.html"><button>Suivant</button></a>
+                <a href="CV.html"><button class="suivant">Suivant</button></a>
     </body>
 </html>
             
