--- a/B.html
+++ b/B.html
@@ -4,15 +4,16 @@
 <title>mon site personnel</title>
 </head>
 <body>
-    <h2><u>Menu</u></h2>
-    <p><a Frame 12% href="Page1.html" target="fenetreC">Page 1</a></p>
-    <p><a  Frame 12% href="Page2.html" target="fenetreC">Page 2</a></p>
-    <p><a  Frame 12% href="Page3.html" target="fenetreC">Page 3</a></p>
-    <p><a  Frame 12% href="Page4.html" target="fenetreC">Page 4</a></p>
-    <p><a  Frame 12% href="Tableau.html" target="fenetreC">Tableau </a></p>
-    <p><a  Frame 12% href="formulaire1.html" target="fenetreC">Formulaire 1</a></p>
-    <p><a  Frame 12% href="formulaire2.html" target="fenetreC">Formulaire 2</a></p>
-    <p><a  Frame 12% href="CV.html" target="fenetreC">CV</a></p>
+    <div class="button-container">
+    <h2 class="btn-link"><u>Menu</u></h2>
+    <p><a class="btn-link" Frame 12% href="Page1.html" target="fenetreC">Page 1</a></p>
+    <p><a class="btn-link" Frame 12% href="Page2.html" target="fenetreC">Page 2</a></p>
+    <p><a class="btn-link" Frame 12% href="Page3.html" target="fenetreC">Page 3</a></p>
+    <p><a class="btn-link" Frame 12% href="Page4.html" target="fenetreC">Page 4</a></p>
+    <p><a class="btn-link" Frame 12% href="Tableau.html" target="fenetreC">Tableau </a></p>
+    <p><a class="btn-link" Frame 12% href="formulaire1.html" target="fenetreC">Formulaire 1</a></p>
+    <p><a class="btn-link" Frame 12% href="formulaire2.html" target="fenetreC">Formulaire 2</a></p>
+    <p><a class="btn-link" Frame 12% href="CV.html" target="fenetreC">CV</a></p>
     <style type="text/css"> 
       @import url(B.css); 
       </style> 
