--- a/CV.html
+++ b/CV.html
@@ -34,6 +34,8 @@
                     <li>Conception de cartes CIP, actes de naissance et autres documents administratifs.</li>
                     <li>Utilisation professionnelle de logiciels de traitement d’images (Photoshop).</li>
                     <li>Maîtrise des outils bureautiques pour la mise en page et la rédaction de documents officiels.</li>
+                    <li>HTML5, CSS3, JavaScript</li>
+                    <li>Python pour analyse de données</li>
                 </ul>
             </div>
         </section>
