--- a/Page4.html
+++ b/Page4.html
@@ -99,6 +99,6 @@
 <li>Quatre</li> 
 </ol> 
 <style type="text/css"> 
-@import url(page4.css); 
+@import url(Page4.css); 
 </style> 
   <a href="Tableau.html"><button class="suivant">Suivant</button></a>
