--- a/formulaire1.html
+++ b/formulaire1.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>mon site personel</title>
+       <style>
         body {
     margin: 0;
     padding: 0;
@@ -93,6 +94,7 @@ button:hover {
     background: linear-gradient(to right, #ff6666, #6699ff);
     transform: scale(1.05);
 }
+    </style>
     </head>
     <body>
             <form>
