--- a/C.html
+++ b/C.html
@@ -82,13 +82,77 @@ button.suivant {
     cursor: pointer;
     font-size: 16px;
         }
+        
+        body {
+            margin: 0;
+            font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #e0f7fa;
+        }
+
+        header {
+            background-color: green;
+            color: white;
+            text-align: center;
+            padding: 50px 20px;
+        }
+
+        nav {
+            background-color: green;
+            padding: 10px;
+            text-align: center;
+        }
+
+        nav a {
+            color: white;
+            margin: 0 15px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        nav a:hover {
+            text-decoration: underline;
+        }
+
+        main {
+            padding: 40px;
+            text-align: center;
+        }
+
+        .welcome {
+            background-color: white;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+            display: inline-block;
+        }
+
+        .welcome h2 {
+            color: green;
+        }
+
+        .btn {
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: green;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            text-decoration: none;
+            font-size: 16px;
+            display: inline-block;
+        }
+
+        .btn:hover {
+            background-color: green;
+        }
+    
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Bienvenue sur mon espace numérique</h1>
         <p>Ce site reflète mes premiers pas dans le développement web, réalisés dans le cadre de ma formation en informatique de gestion. C’est un projet d’apprentissage mais aussi une vitrine de mon savoir-faire.</p>
-
+       <div class="welcome">
         <h2>L'informatique : un monde d’opportunités</h2>
         <p>À travers mes travaux, vous découvrirez comment la technologie ouvre la voie à l’innovation et à la création de solutions adaptées aux besoins actuels. L’ENEAM, école de référence, m’a permis de bâtir ces compétences solides.</p>
 
