--- a/C.html
+++ b/C.html
@@ -152,6 +152,7 @@ button.suivant {
     <div class="container">
         <h1>Bienvenue sur mon espace numérique</h1>
         <p>Ce site reflète mes premiers pas dans le développement web, réalisés dans le cadre de ma formation en informatique de gestion. C’est un projet d’apprentissage mais aussi une vitrine de mon savoir-faire.</p>
+       <main> 
        <div class="welcome">
         <h2>L'informatique : un monde d’opportunités</h2>
         <p>À travers mes travaux, vous découvrirez comment la technologie ouvre la voie à l’innovation et à la création de solutions adaptées aux besoins actuels. L’ENEAM, école de référence, m’a permis de bâtir ces compétences solides.</p>
@@ -160,6 +161,7 @@ button.suivant {
         <p>Je vous invite à explorer ce site et à vous laisser inspirer. Pourquoi ne pas envisager de rejoindre à votre tour cette belle aventure ?</p>
 
         <a href="Page1.html" class="button">Explorer le site</a>
+     </main>
     </div>
     <style type="text/css"> 
     @import url(C.css); 
