--- a/formulaire1.html
+++ b/formulaire1.html
@@ -28,6 +28,21 @@
             </form>
         </section>
 
+        <section class="preferences">
+            <h2>Vos Préférences</h2>
+            <p><strong>Quels aliments aimez-vous?</strong></p>
+            <label><input type="checkbox" name="frites"> Frites</label>
+            <label><input type="checkbox" name="steak"> Steak haché</label>
+            <label><input type="checkbox" name="epinards"> Epinards</label>
+            <label><input type="checkbox" name="huitres"> Huitres</label>
+
+            <p><strong>Votre tranche d'âge:</strong></p>
+            <label><input type="radio" name="age" value="moins15"> Moins de 15 ans</label>
+            <label><input type="radio" name="age" value="medium15-25"> 15-25 ans</label>
+            <label><input type="radio" name="age" value="medium25-40"> 25-40 ans</label>
+            <label><input type="radio" name="age" value="plus40"> Plus de 40 ans</label>
+        </section>
+
         <section class="footer">
             <a href="formulaire2.html"><button class="suivant">Suivant</button></a>
         </section>
@@ -35,3 +50,6 @@
 
 </body>
 </html>
+
+
+                
